<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.proximojogo.proximojogo.ui.AgendaFragment">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lbLocal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:text="@string/local"
                        android:textSize="16sp" />

                    <Spinner
                        android:id="@+id/formulario_local"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:spinnerMode="dropdown" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lbEvento"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:text="@string/evento"
                        android:textSize="16sp" />

                    <Spinner
                        android:id="@+id/formulario_evento"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:spinnerMode="dropdown" />
                </LinearLayout>
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_formulario_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/inicio">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/formulario_Data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_formulario_hora"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fim">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/formulario_hora"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_formulario_valor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/valor">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/formulario_valor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lbTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/equipe"
                        android:textSize="16sp" />

                    <Spinner
                        android:id="@+id/formulario_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:spinnerMode="dropdown"
                        android:paddingTop="2dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lbVersus1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/lbVersus2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/versus"
                        android:textSize="16sp"
                        android:paddingTop="16dp"
                        android:paddingRight="4dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:descendantFocusability="beforeDescendants"
                    android:focusableInTouchMode="true"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/lbAdversario"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/text_input_layout_formulario_adversario"
                        android:layout_width="83dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/adversario">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/formulario_adversario"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:inputType="textCapCharacters"
                            android:paddingTop="22dp"
                            />

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_formulario_observacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/observacao">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/formulario_observacao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </android.support.design.widget.TextInputLayout>

            <EditText
                android:id="@+id/formulario_dia_da_semana"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dia_semana"
                android:visibility="invisible" />

            <Button
                android:id="@+id/bt_salvar_agenda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/salvar" />

            <Button
                android:id="@+id/bt_excluir_agenda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/excluir" />

            <Button
                android:id="@+id/bt_listar_agenda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/listar" />
        </LinearLayout>
    </ScrollView>

</FrameLayout>
