<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nome_arena_lista"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/nome" />


                <TextView
                    android:id="@+id/endereco_arena_lista"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/endereco" />
                <TextView
                    android:id="@+id/telefone_arena_lista"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/telefone"
                    android:paddingRight="@dimen/activity_padding_16dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/horario_funcionamento_arena_lista"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="18:00" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/main_line_more"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_delete_black_24dp" />
    </LinearLayout>


</LinearLayout>